force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Join a payment to one Project and one Contact.
Both a Project and a Contact are required for a payment record.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>Pmt-{000000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>