force-app/main/default/objects/Payment__c/fields/AmountPaid__c.field-meta.xml
<CustomField>
    <fullName>AmountPaid__c</fullName>
    <description>Amount of payment</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>