force-app/main/default/objects/Payment__c/fields/DatePaid__c.field-meta.xml
<CustomField>
    <fullName>DatePaid__c</fullName>
    <description>Date this payment was made.</description>
    <label>Date Paid</label>
    <required>true</required>
    <type>Date</type>
</CustomField>