force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Contact__c</columns>
    <columns>AmountPaid__c</columns>
    <columns>DatePaid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>